--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/gazebodude" class="code">View (Mis)anthropic selection on GitHub</a>
+          <a href="http://gazebodude.github.com/" class="code">View (Mis)anthropic selection</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
