setting up mathjax

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
   <meta name="description" content="Life, the universe and everything (and nothing) from the point of view of a physics grad student">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <script type="text/javascript"
+    src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
 
 </head>
 
