--- a/stylesheets/pygment_trac.css
+++ b/stylesheets/pygment_trac.css
@@ -1,69 +1,416 @@
-.highlight  { background: #ffffff; }
-.highlight .c { color: #999988; font-style: italic } /* Comment */
-.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.highlight .k { font-weight: bold } /* Keyword */
-.highlight .o { font-weight: bold } /* Operator */
-.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
-.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #aa0000 } /* Generic.Error */
-.highlight .gh { color: #999999 } /* Generic.Heading */
-.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
-.highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #555555 } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold; } /* Generic.Subheading */
-.highlight .gt { color: #aa0000 } /* Generic.Traceback */
-.highlight .kc { font-weight: bold } /* Keyword.Constant */
-.highlight .kd { font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.highlight .m { color: #009999 } /* Literal.Number */
-.highlight .s { color: #d14 } /* Literal.String */
-.highlight .na { color: #008080 } /* Name.Attribute */
-.highlight .nb { color: #0086B3 } /* Name.Builtin */
-.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
-.highlight .no { color: #008080 } /* Name.Constant */
-.highlight .ni { color: #800080 } /* Name.Entity */
-.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
-.highlight .nn { color: #555555 } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
-.highlight .nv { color: #008080 } /* Name.Variable */
-.highlight .ow { font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #009999 } /* Literal.Number.Float */
-.highlight .mh { color: #009999 } /* Literal.Number.Hex */
-.highlight .mi { color: #009999 } /* Literal.Number.Integer */
-.highlight .mo { color: #009999 } /* Literal.Number.Oct */
-.highlight .sb { color: #d14 } /* Literal.String.Backtick */
-.highlight .sc { color: #d14 } /* Literal.String.Char */
-.highlight .sd { color: #d14 } /* Literal.String.Doc */
-.highlight .s2 { color: #d14 } /* Literal.String.Double */
-.highlight .se { color: #d14 } /* Literal.String.Escape */
-.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
-.highlight .si { color: #d14 } /* Literal.String.Interpol */
-.highlight .sx { color: #d14 } /* Literal.String.Other */
-.highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d14 } /* Literal.String.Single */
-.highlight .ss { color: #990073 } /* Literal.String.Symbol */
-.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #008080 } /* Name.Variable.Class */
-.highlight .vg { color: #008080 } /* Name.Variable.Global */
-.highlight .vi { color: #008080 } /* Name.Variable.Instance */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+/* line 1, _sass/pygment_trac.scss */
+.highlight {
+  background: #ffffff;
+}
 
-.type-csharp .highlight .k { color: #0000FF }
-.type-csharp .highlight .kt { color: #0000FF }
-.type-csharp .highlight .nf { color: #000000; font-weight: normal }
-.type-csharp .highlight .nc { color: #2B91AF }
-.type-csharp .highlight .nn { color: #000000 }
-.type-csharp .highlight .s { color: #A31515 }
-.type-csharp .highlight .sc { color: #A31515 }
+/* line 2, _sass/pygment_trac.scss */
+.highlight .c {
+  color: #999988;
+  font-style: italic;
+}
+
+/* Comment */
+/* line 3, _sass/pygment_trac.scss */
+.highlight .err {
+  color: #a61717;
+  background-color: #e3d2d2;
+}
+
+/* Error */
+/* line 4, _sass/pygment_trac.scss */
+.highlight .k {
+  font-weight: bold;
+}
+
+/* Keyword */
+/* line 5, _sass/pygment_trac.scss */
+.highlight .o {
+  font-weight: bold;
+}
+
+/* Operator */
+/* line 6, _sass/pygment_trac.scss */
+.highlight .cm {
+  color: #999988;
+  font-style: italic;
+}
+
+/* Comment.Multiline */
+/* line 7, _sass/pygment_trac.scss */
+.highlight .cp {
+  color: #999999;
+  font-weight: bold;
+}
+
+/* Comment.Preproc */
+/* line 8, _sass/pygment_trac.scss */
+.highlight .c1 {
+  color: #999988;
+  font-style: italic;
+}
+
+/* Comment.Single */
+/* line 9, _sass/pygment_trac.scss */
+.highlight .cs {
+  color: #999999;
+  font-weight: bold;
+  font-style: italic;
+}
+
+/* Comment.Special */
+/* line 10, _sass/pygment_trac.scss */
+.highlight .gd {
+  color: #000000;
+  background-color: #ffdddd;
+}
+
+/* Generic.Deleted */
+/* line 11, _sass/pygment_trac.scss */
+.highlight .gd .x {
+  color: #000000;
+  background-color: #ffaaaa;
+}
+
+/* Generic.Deleted.Specific */
+/* line 12, _sass/pygment_trac.scss */
+.highlight .ge {
+  font-style: italic;
+}
+
+/* Generic.Emph */
+/* line 13, _sass/pygment_trac.scss */
+.highlight .gr {
+  color: #aa0000;
+}
+
+/* Generic.Error */
+/* line 14, _sass/pygment_trac.scss */
+.highlight .gh {
+  color: #999999;
+}
+
+/* Generic.Heading */
+/* line 15, _sass/pygment_trac.scss */
+.highlight .gi {
+  color: #000000;
+  background-color: #ddffdd;
+}
+
+/* Generic.Inserted */
+/* line 16, _sass/pygment_trac.scss */
+.highlight .gi .x {
+  color: #000000;
+  background-color: #aaffaa;
+}
+
+/* Generic.Inserted.Specific */
+/* line 17, _sass/pygment_trac.scss */
+.highlight .go {
+  color: #888888;
+}
+
+/* Generic.Output */
+/* line 18, _sass/pygment_trac.scss */
+.highlight .gp {
+  color: #555555;
+}
+
+/* Generic.Prompt */
+/* line 19, _sass/pygment_trac.scss */
+.highlight .gs {
+  font-weight: bold;
+}
+
+/* Generic.Strong */
+/* line 20, _sass/pygment_trac.scss */
+.highlight .gu {
+  color: #800080;
+  font-weight: bold;
+}
+
+/* Generic.Subheading */
+/* line 21, _sass/pygment_trac.scss */
+.highlight .gt {
+  color: #aa0000;
+}
+
+/* Generic.Traceback */
+/* line 22, _sass/pygment_trac.scss */
+.highlight .kc {
+  font-weight: bold;
+}
+
+/* Keyword.Constant */
+/* line 23, _sass/pygment_trac.scss */
+.highlight .kd {
+  font-weight: bold;
+}
+
+/* Keyword.Declaration */
+/* line 24, _sass/pygment_trac.scss */
+.highlight .kn {
+  font-weight: bold;
+}
+
+/* Keyword.Namespace */
+/* line 25, _sass/pygment_trac.scss */
+.highlight .kp {
+  font-weight: bold;
+}
+
+/* Keyword.Pseudo */
+/* line 26, _sass/pygment_trac.scss */
+.highlight .kr {
+  font-weight: bold;
+}
+
+/* Keyword.Reserved */
+/* line 27, _sass/pygment_trac.scss */
+.highlight .kt {
+  color: #445588;
+  font-weight: bold;
+}
+
+/* Keyword.Type */
+/* line 28, _sass/pygment_trac.scss */
+.highlight .m {
+  color: #009999;
+}
+
+/* Literal.Number */
+/* line 29, _sass/pygment_trac.scss */
+.highlight .s {
+  color: #dd1144;
+}
+
+/* Literal.String */
+/* line 30, _sass/pygment_trac.scss */
+.highlight .na {
+  color: teal;
+}
+
+/* Name.Attribute */
+/* line 31, _sass/pygment_trac.scss */
+.highlight .nb {
+  color: #0086b3;
+}
+
+/* Name.Builtin */
+/* line 32, _sass/pygment_trac.scss */
+.highlight .nc {
+  color: #445588;
+  font-weight: bold;
+}
+
+/* Name.Class */
+/* line 33, _sass/pygment_trac.scss */
+.highlight .no {
+  color: teal;
+}
+
+/* Name.Constant */
+/* line 34, _sass/pygment_trac.scss */
+.highlight .ni {
+  color: purple;
+}
+
+/* Name.Entity */
+/* line 35, _sass/pygment_trac.scss */
+.highlight .ne {
+  color: #990000;
+  font-weight: bold;
+}
+
+/* Name.Exception */
+/* line 36, _sass/pygment_trac.scss */
+.highlight .nf {
+  color: #990000;
+  font-weight: bold;
+}
+
+/* Name.Function */
+/* line 37, _sass/pygment_trac.scss */
+.highlight .nn {
+  color: #555555;
+}
+
+/* Name.Namespace */
+/* line 38, _sass/pygment_trac.scss */
+.highlight .nt {
+  color: navy;
+}
+
+/* Name.Tag */
+/* line 39, _sass/pygment_trac.scss */
+.highlight .nv {
+  color: teal;
+}
+
+/* Name.Variable */
+/* line 40, _sass/pygment_trac.scss */
+.highlight .ow {
+  font-weight: bold;
+}
+
+/* Operator.Word */
+/* line 41, _sass/pygment_trac.scss */
+.highlight .w {
+  color: #bbbbbb;
+}
+
+/* Text.Whitespace */
+/* line 42, _sass/pygment_trac.scss */
+.highlight .mf {
+  color: #009999;
+}
+
+/* Literal.Number.Float */
+/* line 43, _sass/pygment_trac.scss */
+.highlight .mh {
+  color: #009999;
+}
+
+/* Literal.Number.Hex */
+/* line 44, _sass/pygment_trac.scss */
+.highlight .mi {
+  color: #009999;
+}
+
+/* Literal.Number.Integer */
+/* line 45, _sass/pygment_trac.scss */
+.highlight .mo {
+  color: #009999;
+}
+
+/* Literal.Number.Oct */
+/* line 46, _sass/pygment_trac.scss */
+.highlight .sb {
+  color: #dd1144;
+}
+
+/* Literal.String.Backtick */
+/* line 47, _sass/pygment_trac.scss */
+.highlight .sc {
+  color: #dd1144;
+}
+
+/* Literal.String.Char */
+/* line 48, _sass/pygment_trac.scss */
+.highlight .sd {
+  color: #dd1144;
+}
+
+/* Literal.String.Doc */
+/* line 49, _sass/pygment_trac.scss */
+.highlight .s2 {
+  color: #dd1144;
+}
+
+/* Literal.String.Double */
+/* line 50, _sass/pygment_trac.scss */
+.highlight .se {
+  color: #dd1144;
+}
+
+/* Literal.String.Escape */
+/* line 51, _sass/pygment_trac.scss */
+.highlight .sh {
+  color: #dd1144;
+}
+
+/* Literal.String.Heredoc */
+/* line 52, _sass/pygment_trac.scss */
+.highlight .si {
+  color: #dd1144;
+}
+
+/* Literal.String.Interpol */
+/* line 53, _sass/pygment_trac.scss */
+.highlight .sx {
+  color: #dd1144;
+}
+
+/* Literal.String.Other */
+/* line 54, _sass/pygment_trac.scss */
+.highlight .sr {
+  color: #009926;
+}
+
+/* Literal.String.Regex */
+/* line 55, _sass/pygment_trac.scss */
+.highlight .s1 {
+  color: #dd1144;
+}
+
+/* Literal.String.Single */
+/* line 56, _sass/pygment_trac.scss */
+.highlight .ss {
+  color: #990073;
+}
+
+/* Literal.String.Symbol */
+/* line 57, _sass/pygment_trac.scss */
+.highlight .bp {
+  color: #999999;
+}
+
+/* Name.Builtin.Pseudo */
+/* line 58, _sass/pygment_trac.scss */
+.highlight .vc {
+  color: teal;
+}
+
+/* Name.Variable.Class */
+/* line 59, _sass/pygment_trac.scss */
+.highlight .vg {
+  color: teal;
+}
+
+/* Name.Variable.Global */
+/* line 60, _sass/pygment_trac.scss */
+.highlight .vi {
+  color: teal;
+}
+
+/* Name.Variable.Instance */
+/* line 61, _sass/pygment_trac.scss */
+.highlight .il {
+  color: #009999;
+}
+
+/* Literal.Number.Integer.Long */
+/* line 63, _sass/pygment_trac.scss */
+.type-csharp .highlight .k {
+  color: blue;
+}
+
+/* line 64, _sass/pygment_trac.scss */
+.type-csharp .highlight .kt {
+  color: blue;
+}
+
+/* line 65, _sass/pygment_trac.scss */
+.type-csharp .highlight .nf {
+  color: #000000;
+  font-weight: normal;
+}
+
+/* line 66, _sass/pygment_trac.scss */
+.type-csharp .highlight .nc {
+  color: #2b91af;
+}
+
+/* line 67, _sass/pygment_trac.scss */
+.type-csharp .highlight .nn {
+  color: black;
+}
+
+/* line 68, _sass/pygment_trac.scss */
+.type-csharp .highlight .s {
+  color: #a31515;
+}
+
+/* line 69, _sass/pygment_trac.scss */
+.type-csharp .highlight .sc {
+  color: #a31515;
+}
