Absolutely bare style-wise; got rid of old creds and got new ones

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,16 +51,11 @@
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>
+	Pages marked up using <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://sass-lang.com/">Sass</a>,<a href="http://compass-style.org/">Compass</a> and <a href="http://coffeescript.org/">Coffeescript</a> by a rank amateur (as you can tell).</small>
       </div>
     </footer>
   </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/gazebodude/gazebodude.github.com/tarball/master" class="tar">tar</a><a href="https://github.com/gazebodude/gazebodude.github.com/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
   
 </body>
 </html>
