Added rake tasks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
   <title>(Mis)anthropic selection</title>
   <meta name="description" content="Life, the universe and everything (and nothing) from the point of view of a physics grad student">
 
+  <!-- MathJax js includes -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script type="text/javascript"
     src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
