--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
     <hgroup>
       <h1>(Mis)anthropic selection</h1>
       <h2>Life, the universe and everything (and nothing) from the point of view of a physics grad student</h2>
+      <img src="/images/banner1.png" alt="site banner"/>
     </hgroup>
   </header>
   <nav id="sidebar">
