--- a/stylesheets/_sass/screen.scss
+++ b/stylesheets/_sass/screen.scss
@@ -62,6 +62,13 @@ body.two-col {
   }
 }
 
+#header {
+  // site banner styles
+  img {
+  
+  }
+}
+
 nav#sidebar {
   &>header {
     @include prepend(1);
