Basic color scheme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
     <div class="owner">
       You can find me on <a href="http://www.researchgate.net/profile/Michael_Brown31/">Researchgate</a>,
       <a href="https://github.com/gazebodude">GitHub</a> or Physics Stackexchange:
-      <p><a href="http://physics.stackexchange.com/users/17320/michael-brown"><img src="http://physics.stackexchange.com/users/flair/17320.png" width="208" height="58" alt="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" title="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" /></a></p>
+      <p><a href="http://physics.stackexchange.com/users/17320/michael-brown"><img src="http://physics.stackexchange.com/users/flair/17320.png?theme=dark" width="208" height="58" alt="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" title="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" /></a></p>
     </div>
     <div class="creds">
       <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>
