--- a/stylesheets/_sass/screen.scss
+++ b/stylesheets/_sass/screen.scss
@@ -69,15 +69,25 @@ body.two-col {
   img {
   
   }
-  h1 { color: $header-color; }
-  h2 { color: $text-color; }
+  h1 {
+    color: $header-color;
+    font-family: "Gothic Ultra";
+    font-size: 8em;
+    margin-bottom: 0;
+  }
+  h2 { 
+    color: $text-color;
+    text-align: right;
+    font-size: 1.75em;
+    font-style: italic;
+  }
 }
 
 nav#sidebar {
+  //@include prepend(.5);
   &>header {
-    @include prepend(1);
-    &>h1 { font-size: 2em; }
-    &>h2 { font-size: 0.75em; }
+    &>h1 { font-size: 2em; margin-top: 0.2em; margin-bottom: 0; }
+    &>h2 { color: $text-color; font-size: 0.75em; }
   }
   &>ul {
     @include no-bullets;
