Footer style tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,15 +84,11 @@
     </article>
   </section>
   <footer id="footer">
-    <div class="owner">
-      You can find me on <a href="http://www.researchgate.net/profile/Michael_Brown31/">Researchgate</a>,
-      <a href="https://github.com/gazebodude">GitHub</a> or Physics Stackexchange:
-      <p><a href="http://physics.stackexchange.com/users/17320/michael-brown"><img src="http://physics.stackexchange.com/users/flair/17320.png?theme=dark" width="208" height="58" alt="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" title="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" /></a></p>
-    </div>
-    <div class="creds">
-      <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>
-      Pages marked up using <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://sass-lang.com/">Sass</a>,<a href="http://compass-style.org/">Compass</a> and <a href="http://coffeescript.org/">Coffeescript</a> by a rank amateur (as you can tell).</small>
-    </div>
+    <span id="SE-flair"><a href="http://physics.stackexchange.com/users/17320/michael-brown"><img src="http://physics.stackexchange.com/users/flair/17320.png?theme=dark" width="208" height="58" alt="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" title="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" /></a></span>
+    You can find me on <a href="http://www.researchgate.net/profile/Michael_Brown31/">Researchgate</a>,
+    <a href="https://github.com/gazebodude">GitHub</a> or <a href="http://physics.stackexchange.com/users/17320/michael-brown">Physics Stackexchange</a>.<br/>
+    <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a>.<br/>
+    Pages marked up using <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://sass-lang.com/">Sass</a>,<a href="http://compass-style.org/">Compass</a> and <a href="http://coffeescript.org/">Coffeescript</a> by a rank amateur (as you can tell).</small>
   </footer>
 </div>
 </body>
