--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,9 @@
 layout: default
 ---
 
-<div id="post">
-	<h2 class="post-title">{{ page.title }}</h2>
-	{{ content }}
-
-</div>
+<header>
+  <h1 class="post-title">{{ page.title }}</h1>
+</header>
+<article>
+  {{ content }}
+</article>
