--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <header>
-  <h1 class="post-title">{{ page.title }}</h1>
+  <h1 id="post-title">{{ page.title }}</h1>
 </header>
-<article>
+<article id="post-body">
   {{ content }}
 </article>
