--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,10 @@
   </header>
   <nav id="sidebar">
     <header>
-      <h1>Quicklinks</h1>
-      <h2>(order implies no value judgement)</h2>
+      <hgroup>
+        <h1>Quicklinks</h1>
+        <h2>(order implies no value judgement)</h2>
+      </hgroup>
     </header>
       <ul>
 	<li>Physics Blogs &amp; Reference</li>
