--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 <div  id="container">
   <header id="header">
     <hgroup>
-      <h1>(Mis)anthropic selection</h1>
+      <h1><a class="header-link" href="/index.html">(Mis)anthropic selection</a></h1>
       <h2>Life, the universe and everything (and nothing) from the point of view of a physics grad student</h2>
       <img src="/images/banner1.png" alt="site banner"/>
     </hgroup>
