Favicon (camera + integral); "About Me" stub

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
+  <link rel="shortcut icon" href="/favicon.png" />
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
   <!--[if IE]>
@@ -12,7 +13,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="/javascripts/script.js"></script>
 
-  <title>(Mis)anthropic selection</title>
+  <title>{{ page.title }}</title>
   <meta name="description" content="Life, the universe and everything (and nothing) from the point of view of a physics grad student">
 
   <!-- MathJax js includes -->
@@ -45,6 +46,10 @@
       </hgroup>
     </header>
       <ul>
+  <li>About</li>
+  <ul>
+  <li><a href="/about/">Me</a></li>
+  </ul>
 	<li>Physics Blogs &amp; Reference</li>
 	<ul>
 	<li><a href="http://www.preposterousuniverse.com/blog/">Sean Carroll</a></li>
