README & Footer tweaks; Photo gallery styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
   <!--[if IE]>
       <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <link href="/stylesheets/lightbox.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="/javascripts/lightbox-2.6.min.js"></script>
   <script type="text/javascript" src="/javascripts/script.js"></script>
 
   <title>{{ page.title }}</title>
@@ -89,11 +91,16 @@
       </ul>
   </nav>
   <footer id="footer">
+    <div class="flair">
     <span id="SE-flair"><a href="http://physics.stackexchange.com/users/17320/michael-brown"><img src="http://physics.stackexchange.com/users/flair/17320.png?theme=dark" width="208" height="58" alt="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" title="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" /></a></span>
     You can find me on <a href="http://www.researchgate.net/profile/Michael_Brown31/">Researchgate</a>,
     <a href="https://github.com/gazebodude">GitHub</a> or <a href="http://physics.stackexchange.com/users/17320/michael-brown">Physics Stackexchange</a>.<br/>
     <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a>.<br/>
     Pages marked up using <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://sass-lang.com/">Sass</a>, <a href="http://compass-style.org/">Compass</a> and <a href="http://coffeescript.org/">Coffeescript</a> by a rank amateur (as you can tell).</small>
+    </div>
+    <div class="CC-license">
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work by <a xmlns:cc="http://creativecommons.org/ns#" href="http://gazebodude.github.io" property="cc:attributionName" rel="cc:attributionURL">Michael Brown</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    </div>
   </footer>
 </div>
 </body>
