--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,48 +47,52 @@
         <h2>(order implies no value judgement)</h2>
       </hgroup>
     </header>
+    <ul>
+      <li>About</li>
       <ul>
-  <li>About</li>
-  <ul>
-  <li><a href="/about/">Me</a></li>
-  </ul>
-	<li>Physics Blogs &amp; Reference</li>
-	<ul>
-	<li><a href="http://www.preposterousuniverse.com/blog/">Sean Carroll</a></li>
-	<li><a href="http://johncarlosbaez.wordpress.com/">Azimuth</a></li>
-	<li><a href="http://www.slate.com/blogs/bad_astronomy.html">Bad Astronomy</a></li>
-	<li><a href="http://profmattstrassler.com/">Of Particular Significance</a></li>
-	<li><a href="http://www.math.columbia.edu/~woit/wordpress/">Not Even Wrong</a></li>
-	<li><a href="http://resonaances.blogspot.com.au/">Resonaances</a></li>
-	<li><a href="http://physics.stackexchange.com/">Physics Stack Exchange</a></li>
-	<li><a href="http://pdg.lbl.gov/index.html">PDG: Reviews of Particle Physics</a></li>
-	<li><a href="http://arxiv.org/">Arxiv</a></li>
-	<li><a href="http://blog.vixra.org/">Vixra</a></li>
-	</ul>
-	<li>Christianity &amp; Social Conscience</li>
-	<ul>
-	<li><a href="http://www.patheos.com/blogs/slacktivist/">Slacktivist</a></li>
-	<li><a href="http://www.patheos.com/blogs/peterenns/">Peter Enns</a></li>
-	<li><a href="http://experimentaltheology.blogspot.com.au/">Experimental Theology</a></li>
-	<li><a href="http://www.carlmedearis.com/blog/">Carl Medearis</a></li>
-	<li><a href="http://brianmclaren.net/">Brian McLaren</a></li>
-	</ul>
-	<li>Games &amp; Youtubers</li>
-	<ul>
-	<li><a href="https://www.kerbalspaceprogram.com/index.php">Kerbal Space Program</a></li>
-	<li><a href="http://www.youtube.com/user/szyzyg">Scott Manley</a></li>
-	<li><a href="http://www.youtube.com/user/TheWinterOwl">The Winter Owl</a></li>
-	<li><a href="http://www.youtube.com/user/xPDxTV">Play Daily TV</a></li>
-	<li><a href="http://www.youtube.com/user/SideStrafe">SideStrafe</a></li>
-	<li><a href="http://www.youtube.com/user/FRANKIEonPCin1080p">FRANKIEonPCin1080p</a></li>
-	<li><a href="http://www.youtube.com/user/quill18">Quill18</a></li>
-	</ul>
-	<li>Comics</li>
-	<ul>
-	<li><a href="http://xkcd.com/">xkcd</a> (<a href="http://what-if.xkcd.com/">What If?</a>)</li>
-	<li><a href="http://theoatmeal.com/comics">The Oatmeal</a></li>
-	</ul>
+      <li><a href="/about/">Me</a></li>
       </ul>
+    	<li>Physics Blogs &amp; Reference</li>
+    	<ul>
+    	<li><a href="http://www.preposterousuniverse.com/blog/">Sean Carroll</a></li>
+    	<li><a href="http://johncarlosbaez.wordpress.com/">Azimuth</a></li>
+    	<li><a href="http://www.slate.com/blogs/bad_astronomy.html">Bad Astronomy</a></li>
+    	<li><a href="http://profmattstrassler.com/">Of Particular Significance</a></li>
+    	<li><a href="http://www.math.columbia.edu/~woit/wordpress/">Not Even Wrong</a></li>
+    	<li><a href="http://resonaances.blogspot.com.au/">Resonaances</a></li>
+    	<li><a href="http://physics.stackexchange.com/">Physics Stack Exchange</a></li>
+    	<li><a href="http://pdg.lbl.gov/index.html">PDG: Reviews of Particle Physics</a></li>
+    	<li><a href="http://arxiv.org/">Arxiv</a></li>
+    	<li><a href="http://blog.vixra.org/">Vixra</a></li>
+    	</ul>
+    	<li>Christianity &amp; Social Conscience</li>
+    	<ul>
+    	<li><a href="http://www.patheos.com/blogs/slacktivist/">Slacktivist</a></li>
+    	<li><a href="http://www.patheos.com/blogs/peterenns/">Peter Enns</a></li>
+    	<li><a href="http://experimentaltheology.blogspot.com.au/">Experimental Theology</a></li>
+    	<li><a href="http://www.carlmedearis.com/blog/">Carl Medearis</a></li>
+    	<li><a href="http://brianmclaren.net/">Brian McLaren</a></li>
+    	</ul>
+    	<li>Games &amp; Youtubers</li>
+    	<ul>
+    	<li><a href="https://www.kerbalspaceprogram.com/index.php">Kerbal Space Program</a></li>
+    	<li><a href="http://www.youtube.com/user/szyzyg">Scott Manley</a></li>
+    	<li><a href="http://www.youtube.com/user/TheWinterOwl">The Winter Owl</a></li>
+    	<li><a href="http://www.youtube.com/user/xPDxTV">Play Daily TV</a></li>
+    	<li><a href="http://www.youtube.com/user/SideStrafe">SideStrafe</a></li>
+    	<li><a href="http://www.youtube.com/user/FRANKIEonPCin1080p">FRANKIEonPCin1080p</a></li>
+    	<li><a href="http://www.youtube.com/user/quill18">Quill18</a></li>
+    	</ul>
+    	<li>Comics</li>
+    	<ul>
+    	<li><a href="http://xkcd.com/">xkcd</a> (<a href="http://what-if.xkcd.com/">What If?</a>)</li>
+    	<li><a href="http://theoatmeal.com/comics">The Oatmeal</a></li>
+    	</ul>
+      <li>Feed</li>
+      <ul>
+      <li><a href="/atom.xml"><img alt="Atom feed" src="/images/Feed-icon.svg" width="32" height="32"/></a></li>
+      </ul>
+    </ul>
   </nav>
   <footer id="footer">
     <div class="flair">
