Post: Hosting a Lightbox image gallery with Dropbox and Jekyll
Also fixed embedded gist styles.

--- a/stylesheets/_sass/partials/_syntax.scss
+++ b/stylesheets/_sass/partials/_syntax.scss
@@ -1,4 +1,4 @@
-body.bp .highlight {
+body.bp div.highlight {
   background: $block-background-color;
   border-radius: $block-corner-radius;
   box-shadow: 4px 4px 5px $block-shadow-color inset, -2px -2px 5px $block-shadow-color inset;
