--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -684,7 +684,7 @@ body.two-col a:active {
 }
 
 /* line 1, _sass/partials/_syntax.scss */
-body.bp .highlight {
+body.bp div.highlight {
   background: #303030;
   border-radius: 1em;
   box-shadow: 4px 4px 5px #202020 inset, -2px -2px 5px #202020 inset;
@@ -749,263 +749,272 @@ body.bp .highlight {
   /* Literal.Number.Integer.Long */
 }
 /* line 5, _sass/partials/_syntax.scss */
-body.bp .highlight .lines {
+body.bp div.highlight .lines {
   float: left;
   display: inline-block;
 }
 /* line 9, _sass/partials/_syntax.scss */
-body.bp .highlight pre {
+body.bp div.highlight pre {
   display: inline-block;
   margin-left: 1em;
 }
 /* line 13, _sass/partials/_syntax.scss */
-body.bp .highlight .c {
+body.bp div.highlight .c {
   color: #999988;
   font-style: italic;
 }
 /* line 14, _sass/partials/_syntax.scss */
-body.bp .highlight .err {
+body.bp div.highlight .err {
   color: #a61717;
   background-color: #e3d2d2;
 }
 /* line 15, _sass/partials/_syntax.scss */
-body.bp .highlight .k {
+body.bp div.highlight .k {
   font-weight: bold;
 }
 /* line 16, _sass/partials/_syntax.scss */
-body.bp .highlight .o {
+body.bp div.highlight .o {
   font-weight: bold;
 }
 /* line 17, _sass/partials/_syntax.scss */
-body.bp .highlight .cm {
+body.bp div.highlight .cm {
   color: #999988;
   font-style: italic;
 }
 /* line 18, _sass/partials/_syntax.scss */
-body.bp .highlight .cp {
+body.bp div.highlight .cp {
   color: #999999;
   font-weight: bold;
 }
 /* line 19, _sass/partials/_syntax.scss */
-body.bp .highlight .c1 {
+body.bp div.highlight .c1 {
   color: #999988;
   font-style: italic;
 }
 /* line 20, _sass/partials/_syntax.scss */
-body.bp .highlight .cs {
+body.bp div.highlight .cs {
   color: #999999;
   font-weight: bold;
   font-style: italic;
 }
 /* line 21, _sass/partials/_syntax.scss */
-body.bp .highlight .gd {
+body.bp div.highlight .gd {
   color: #000000;
   background-color: #ffdddd;
 }
 /* line 22, _sass/partials/_syntax.scss */
-body.bp .highlight .gd .x {
+body.bp div.highlight .gd .x {
   color: #000000;
   background-color: #ffaaaa;
 }
 /* line 23, _sass/partials/_syntax.scss */
-body.bp .highlight .ge {
+body.bp div.highlight .ge {
   font-style: italic;
 }
 /* line 24, _sass/partials/_syntax.scss */
-body.bp .highlight .gr {
+body.bp div.highlight .gr {
   color: #aa0000;
 }
 /* line 25, _sass/partials/_syntax.scss */
-body.bp .highlight .gh {
+body.bp div.highlight .gh {
   color: #999999;
 }
 /* line 26, _sass/partials/_syntax.scss */
-body.bp .highlight .gi {
+body.bp div.highlight .gi {
   color: #000000;
   background-color: #ddffdd;
 }
 /* line 27, _sass/partials/_syntax.scss */
-body.bp .highlight .gi .x {
+body.bp div.highlight .gi .x {
   color: #000000;
   background-color: #aaffaa;
 }
 /* line 28, _sass/partials/_syntax.scss */
-body.bp .highlight .go {
+body.bp div.highlight .go {
   color: #888888;
 }
 /* line 29, _sass/partials/_syntax.scss */
-body.bp .highlight .gp {
+body.bp div.highlight .gp {
   color: #555555;
 }
 /* line 30, _sass/partials/_syntax.scss */
-body.bp .highlight .gs {
+body.bp div.highlight .gs {
   font-weight: bold;
 }
 /* line 31, _sass/partials/_syntax.scss */
-body.bp .highlight .gu {
+body.bp div.highlight .gu {
   color: #aaaaaa;
 }
 /* line 32, _sass/partials/_syntax.scss */
-body.bp .highlight .gt {
+body.bp div.highlight .gt {
   color: #aa0000;
 }
 /* line 33, _sass/partials/_syntax.scss */
-body.bp .highlight .kc {
+body.bp div.highlight .kc {
   font-weight: bold;
 }
 /* line 34, _sass/partials/_syntax.scss */
-body.bp .highlight .kd {
+body.bp div.highlight .kd {
   font-weight: bold;
 }
 /* line 35, _sass/partials/_syntax.scss */
-body.bp .highlight .kp {
+body.bp div.highlight .kp {
   font-weight: bold;
 }
 /* line 36, _sass/partials/_syntax.scss */
-body.bp .highlight .kr {
+body.bp div.highlight .kr {
   font-weight: bold;
 }
 /* line 37, _sass/partials/_syntax.scss */
-body.bp .highlight .kt {
+body.bp div.highlight .kt {
   color: #445588;
   font-weight: bold;
 }
 /* line 38, _sass/partials/_syntax.scss */
-body.bp .highlight .m {
+body.bp div.highlight .m {
   color: #009999;
 }
 /* line 39, _sass/partials/_syntax.scss */
-body.bp .highlight .s {
+body.bp div.highlight .s {
   color: #dd1144;
 }
 /* line 40, _sass/partials/_syntax.scss */
-body.bp .highlight .na {
+body.bp div.highlight .na {
   color: teal;
 }
 /* line 41, _sass/partials/_syntax.scss */
-body.bp .highlight .nb {
+body.bp div.highlight .nb {
   color: #0086b3;
 }
 /* line 42, _sass/partials/_syntax.scss */
-body.bp .highlight .nc {
+body.bp div.highlight .nc {
   color: #445588;
   font-weight: bold;
 }
 /* line 43, _sass/partials/_syntax.scss */
-body.bp .highlight .no {
+body.bp div.highlight .no {
   color: teal;
 }
 /* line 44, _sass/partials/_syntax.scss */
-body.bp .highlight .ni {
+body.bp div.highlight .ni {
   color: purple;
 }
 /* line 45, _sass/partials/_syntax.scss */
-body.bp .highlight .ne {
+body.bp div.highlight .ne {
   color: #990000;
   font-weight: bold;
 }
 /* line 46, _sass/partials/_syntax.scss */
-body.bp .highlight .nf {
+body.bp div.highlight .nf {
   color: #990000;
   font-weight: bold;
 }
 /* line 47, _sass/partials/_syntax.scss */
-body.bp .highlight .nn {
+body.bp div.highlight .nn {
   color: #555555;
 }
 /* line 48, _sass/partials/_syntax.scss */
-body.bp .highlight .nt {
+body.bp div.highlight .nt {
   color: navy;
 }
 /* line 49, _sass/partials/_syntax.scss */
-body.bp .highlight .nv {
+body.bp div.highlight .nv {
   color: teal;
 }
 /* line 50, _sass/partials/_syntax.scss */
-body.bp .highlight .ow {
+body.bp div.highlight .ow {
   font-weight: bold;
 }
 /* line 51, _sass/partials/_syntax.scss */
-body.bp .highlight .w {
+body.bp div.highlight .w {
   color: #bbbbbb;
 }
 /* line 52, _sass/partials/_syntax.scss */
-body.bp .highlight .mf {
+body.bp div.highlight .mf {
   color: #009999;
 }
 /* line 53, _sass/partials/_syntax.scss */
-body.bp .highlight .mh {
+body.bp div.highlight .mh {
   color: #009999;
 }
 /* line 54, _sass/partials/_syntax.scss */
-body.bp .highlight .mi {
+body.bp div.highlight .mi {
   color: #009999;
 }
 /* line 55, _sass/partials/_syntax.scss */
-body.bp .highlight .mo {
+body.bp div.highlight .mo {
   color: #009999;
 }
 /* line 56, _sass/partials/_syntax.scss */
-body.bp .highlight .sb {
+body.bp div.highlight .sb {
   color: #dd1144;
 }
 /* line 57, _sass/partials/_syntax.scss */
-body.bp .highlight .sc {
+body.bp div.highlight .sc {
   color: #dd1144;
 }
 /* line 58, _sass/partials/_syntax.scss */
-body.bp .highlight .sd {
+body.bp div.highlight .sd {
   color: #dd1144;
 }
 /* line 59, _sass/partials/_syntax.scss */
-body.bp .highlight .s2 {
+body.bp div.highlight .s2 {
   color: #dd1144;
 }
 /* line 60, _sass/partials/_syntax.scss */
-body.bp .highlight .se {
+body.bp div.highlight .se {
   color: #dd1144;
 }
 /* line 61, _sass/partials/_syntax.scss */
-body.bp .highlight .sh {
+body.bp div.highlight .sh {
   color: #dd1144;
 }
 /* line 62, _sass/partials/_syntax.scss */
-body.bp .highlight .si {
+body.bp div.highlight .si {
   color: #dd1144;
 }
 /* line 63, _sass/partials/_syntax.scss */
-body.bp .highlight .sx {
+body.bp div.highlight .sx {
   color: #dd1144;
 }
 /* line 64, _sass/partials/_syntax.scss */
-body.bp .highlight .sr {
+body.bp div.highlight .sr {
   color: #009926;
 }
 /* line 65, _sass/partials/_syntax.scss */
-body.bp .highlight .s1 {
+body.bp div.highlight .s1 {
   color: #dd1144;
 }
 /* line 66, _sass/partials/_syntax.scss */
-body.bp .highlight .ss {
+body.bp div.highlight .ss {
   color: #990073;
 }
 /* line 67, _sass/partials/_syntax.scss */
-body.bp .highlight .bp {
+body.bp div.highlight .bp {
   color: #999999;
 }
 /* line 68, _sass/partials/_syntax.scss */
-body.bp .highlight .vc {
+body.bp div.highlight .vc {
   color: teal;
 }
 /* line 69, _sass/partials/_syntax.scss */
-body.bp .highlight .vg {
+body.bp div.highlight .vg {
   color: teal;
 }
 /* line 70, _sass/partials/_syntax.scss */
-body.bp .highlight .vi {
+body.bp div.highlight .vi {
   color: teal;
 }
 /* line 71, _sass/partials/_syntax.scss */
-body.bp .highlight .il {
+body.bp div.highlight .il {
   color: #009999;
+}
+
+/* line 168, _sass/screen.scss */
+div.gist pre.lines {
+  display: none;
+}
+/* line 171, _sass/screen.scss */
+div.gist table.highlight {
+  background-color: inherit;
 }
