Comment link styles

--- a/stylesheets/_sass/screen.scss
+++ b/stylesheets/_sass/screen.scss
@@ -157,6 +157,9 @@ $SE-flair-width: 209px;
     color: #ffffff;
     margin: 3px;
   }
+  .comments-link {
+    font-size: 0.75em;
+  }
 }
 
 // Syntax highlighting stylesheet
