Hide Disqus when serving locally

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,9 @@ layout: default
   {{ content }}
 </article>
 <footer>
+{% if site.serving %}
+  Disqus comments go here in the rendered site.
+{% else %}
   <div id="disqus_thread"></div>
   <script type="text/javascript">
   var disqus_shortname = 'misanthropicselection';
@@ -21,4 +24,5 @@ layout: default
   </script>
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+{% endif %}
 </footer>
