rebootniking; emoji css tweak

--- a/stylesheets/_sass/screen.scss
+++ b/stylesheets/_sass/screen.scss
@@ -150,6 +150,9 @@ $SE-flair-width: 209px;
     width: 100px;
     float: left;
   }
+  img.emoji {
+    width: 20px;
+  }
   div.gallery-thumbnail-container {
     width: 100px;
     height: 150px;
