Physics blog list

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,8 @@
     	<li><a href="http://profmattstrassler.com/">Of Particular Significance</a></li>
     	<li><a href="http://www.math.columbia.edu/~woit/wordpress/">Not Even Wrong</a></li>
     	<li><a href="http://resonaances.blogspot.com.au/">Resonaances</a></li>
+    	<li><a href="http://backreaction.blogspot.com.au/">Backreaction</a></li>
+    	<li><a href="http://www.science20.com/quantum_diaries_survivor">A Quantum Diaries Survivor</a></li>
     	<li><a href="http://physics.stackexchange.com/">Physics Stack Exchange</a></li>
     	<li><a href="http://pdg.lbl.gov/index.html">PDG: Reviews of Particle Physics</a></li>
     	<li><a href="http://arxiv.org/">Arxiv</a></li>
